unpackaged/main/default/objects/Dossier_de_prise_en_charge__c/Dossier_de_prise_en_charge__c.object-meta.xml
<CustomObject>
    <description>Le Dossier de Prise en Charge est l&apos;objet qui regroupe les versions successive d&apos;un Plan d&apos;intervention, les évaluations interRAI, demandes OPAS d&apos;un Patient.</description>
    <label>Dossier de prise en charge</label>
    <nameField>
        <displayFormat>DPC-{00000000}</displayFormat>
        <label>Dossier de prise en charge</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dossiers de prise en charge</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>