unpackaged/main/default/objects/Dossier_de_prise_en_charge__c/fields/a_Dossier_de_soins__c.field-meta.xml
<CustomField>
    <fullName>a_Dossier_de_soins__c</fullName>
    <formula>hyperlink(&quot;/&quot; &amp; CASESAFEID(Patient__r.a_Dossier_de_soins__r.Id), &quot;Lien vers le dossier de soin&quot;, &quot;/view&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dossier de soins</label>
    <type>Text</type>
</CustomField>