unpackaged/main/default/objects/Dossier_de_prise_en_charge__c/fields/Description_de_la_prise_en_charge__c.field-meta.xml
<CustomField>
    <fullName>Description_de_la_prise_en_charge__c</fullName>
    <label>Description de la prise en charge</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>