unpackaged/main/default/objects/Dossier_de_prise_en_charge__c/fields/LAMal_avec_maternit__c.field-meta.xml
<CustomField>
    <fullName>LAMal_avec_maternit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LAMal avec maternité</label>
    <type>Checkbox</type>
</CustomField>