unpackaged/main/default/objects/Dossier_de_prise_en_charge__c/fields/Prise_en_charge_en_priv__c.field-meta.xml
<CustomField>
    <fullName>Prise_en_charge_en_priv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prise en charge en privé</label>
    <type>Checkbox</type>
</CustomField>