unpackaged/main/default/objects/Dossier_de_prise_en_charge__c/fields/Prise_en_charge_par_fondation_social__c.field-meta.xml
<CustomField>
    <fullName>Prise_en_charge_par_fondation_social__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prise en charge par fondation / social</label>
    <type>Checkbox</type>
</CustomField>