unpackaged/main/default/objects/Dossier_de_prise_en_charge__c/fields/Prise_en_charge_par_LAA_accident__c.field-meta.xml
<CustomField>
    <fullName>Prise_en_charge_par_LAA_accident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prise en charge par LAA (accident)</label>
    <type>Checkbox</type>
</CustomField>