unpackaged/main/default/objects/Dossier_de_prise_en_charge__c/fields/Si_accident_num_ro_du_sinistre__c.field-meta.xml
<CustomField>
    <fullName>Si_accident_num_ro_du_sinistre__c</fullName>
    <label>Si accident, numéro du sinistre</label>
    <length>30</length>
    <type>Text</type>
</CustomField>