unpackaged/main/default/objects/Dossier_de_prise_en_charge__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En préparation</fullName>
            </value>
            <value>
                <fullName>Actif</fullName>
            </value>
            <value>
                <fullName>Fermé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>