unpackaged/main/default/objects/Dossier_de_prise_en_charge__c/fields/Valide_au__c.field-meta.xml
<CustomField>
    <fullName>Valide_au__c</fullName>
    <label>Valide au</label>
    <type>Date</type>
</CustomField>