unpackaged/main/default/objects/Dossier_de_prise_en_charge__c/fields/Valide_du__c.field-meta.xml
<CustomField>
    <fullName>Valide_du__c</fullName>
    <label>Valide du</label>
    <required>true</required>
    <type>Date</type>
</CustomField>